Removendo conteudo de 'backup' e colocando nos apps certos

--- a/nimbus/backup/templates/backup_add.html
+++ b/nimbus/backup/templates/backup_add.html
@@ -34,7 +34,7 @@
                         <a href="/computers/add" class="side_link">Adicionar Computador</a>
                     {% endif %}
                     {% if field.label == 'Schedule' %}
-                        <a href="/backup/schedules/add" class="side_link schedules">Adicionar Agendamento</a>
+                        <a href="/schedules/add" class="side_link schedules">Adicionar Agendamento</a>
                     {% endif %}
                     {% if field.label == 'Fileset' %}
                         <a href="/backup/filesets/add" class="side_link filesets">Adicionar Conjunto de Arquivos</a>
