--- a/nimbus/schedules/templates/add_schedule.html
+++ b/nimbus/schedules/templates/add_schedule.html
@@ -27,7 +27,7 @@
         <h2>{{ title }}</h2>
     </div>		<!-- .block_head ends -->
     <div class="block_content">
-        <form name="schedule_new" action="/backup/schedules/add" method="post" id="schedule_new">
+        <form name="schedule_new" action="/schedules/add/" method="post" id="schedule_new">
         <div id="error-box">
             {% if errors.schedule_name %}
             <ul class="errorlist">
