Movido conteúdo de 'backup' para 'filesets'

--- a/nimbus/backup/templates/backup_add.html
+++ b/nimbus/backup/templates/backup_add.html
@@ -37,7 +37,7 @@
                         <a href="/schedules/add" class="side_link schedules">Adicionar Agendamento</a>
                     {% endif %}
                     {% if field.label == 'Fileset' %}
-                        <a href="/backup/filesets/add" class="side_link filesets">Adicionar Conjunto de Arquivos</a>
+                        <a href="/filesets/add" class="side_link filesets">Adicionar Conjunto de Arquivos</a>
                     {% endif %}
                 </p>
             {% endfor %}
