Removido app 'backup' do projeto

--- a/nimbus/base/templates/base.html
+++ b/nimbus/base/templates/base.html
@@ -55,7 +55,7 @@
 				<ul id="nav">
 					<li class="active"><a href="#">Backup</a>
 					    <ul>
-					        <li><a href="/backup/add">Criar backup</a></li>
+					        <li><a href="/procedures/add">Criar backup</a></li>
                             <li><a href="/restore/view/">Restaurar Backup</a></li>
                             <li><a href="/procedures/profile/list">Listar perfis de configuração</a></li>
                             <li><a href="/procedures/list">Listar procedimentos</a></li>
