Revisão de scripts e estilos adicionados nos templates base

--- a/nimbus/media/js/iphone-style-checkboxes/style.css
+++ b/nimbus/media/js/iphone-style-checkboxes/style.css
@@ -1,4 +1,4 @@
-// Disable text selection outside of IE
+/* Disable text selection outside of IE */
 .iPhoneCheckContainer, 
 .iPhoneCheckContainer label {
   user-select: none;
