--- a/nimbus/base/templates/base.html
+++ b/nimbus/base/templates/base.html
@@ -16,23 +16,19 @@
 	<link rel="stylesheet" type="text/css" href="/media/js/iphone-style-checkboxes/style.css" />
 	<link rel="stylesheet" type="text/css" href="/media/js/progressbar/jquery.ui.all.css" />
 	
-	<!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=7" /><![endif]-->
-	<!--[if lt IE 8]>
-		<link rel="stylesheet" type="text/css" href="/media/lib/css/ie.css" />
-	<![endif]-->
-	<!--[if IE]><script type="text/javascript" src="/media/lib/js/excanvas.js"></script><![endif]-->
+
 	
+	<!--# main jquery call -->
 	<script type="text/javascript" src="/media/lib/js/jquery.js"></script>
     <script type="text/javascript" src="/media/main.js"></script>
+	<script type="text/javascript" src="/media/js/iphone-style-checkboxes/jquery/iphone-style-checkboxes.js"></script>
     <script type="text/javascript" src="/media/lib/js/jquery.filestyle.mini.js"></script>
 	<script type="text/javascript" src="/media/lib/js/jquery.wysiwyg.js"></script>
 	<script type="text/javascript" src="/media/lib/js/jquery.date_input.pack.js"></script>
 	<script type="text/javascript" src="/media/lib/js/facebox.js"></script>
-	<script type="text/javascript" src="/media/lib/js/jquery.select_skin.js"></script>
 	<script type="text/javascript" src="/media/lib/js/ajaxupload.js"></script>
 	<script type="text/javascript" src="/media/lib/js/jquery.pngfix.js"></script>
 	<script type="text/javascript" src="/media/lib/js/jquery.filetree.js"></script>
-	<script type="text/javascript" src="/media/js/iphone-style-checkboxes/jquery/iphone-style-checkboxes.js"></script>
 	<script src="/media/js/progressbar/jquery.ui.core.min.js" type="text/javascript"></script>
 	<script src="/media/js/progressbar/jquery.ui.widget.min.js" type="text/javascript"></script>	
 	<script src="/media/js/progressbar/jquery.ui.progressbar.min.js" type="text/javascript"></script>
