--- a/nimbus/schedules/templates/add_schedule.html
+++ b/nimbus/schedules/templates/add_schedule.html
@@ -5,9 +5,6 @@
 <link rel="stylesheet" type="text/css" href="/media/lib/css/style.css" />
 <script type="text/javascript" src="/media/js/backup.js"></script>
 <script type="text/javascript" src="/media/js/schedules.js"></script>
-<style type="text/css">
-.schedule_activate{float: left; margin-right: 4px;}
-</style>
 {% endblock %}
 
 {% block page %}
@@ -24,7 +21,7 @@
         <div class="bheadl"></div>
         <div class="bheadr"></div>
 
-        <h2>{{ title }}</h2>
+        <h2>{{ title }} mais isso</h2>
     </div>		<!-- .block_head ends -->
     <div class="block_content">
         <form name="schedule_new" action="/schedules/add/" method="post" id="schedule_new">
