Agora é possivel salvar um schedule como modelo

--- a/nimbus/schedules/templates/add_schedule.html
+++ b/nimbus/schedules/templates/add_schedule.html
@@ -87,7 +87,7 @@
                 <small>No backup full é feita uma cópia completa de todos os arquivos "marcados" para backup. No incremental é feita uma cópia apenas das modificações. É importamente sempre manter uma política mista de backups.</small>
             </p>
             <p>
-                <input type="button" class="submit" value="Criar" />
+                <input type="button" class="use_it submit" value="Usar" /><input type="button" class="use_and_save_it submit" value="Salvar como modelo" />
             </p>
         </div>		<!-- .sidebar_content ends -->
 
@@ -122,7 +122,7 @@
                 <small>No backup full é feita uma cópia completa de todos os arquivos "marcados" para backup. No incremental é feita uma cópia apenas das modificações. É importamente sempre manter uma política mista de backups.</small>
             </p>
             <p>
-                <input type="button" class="submit" value="Criar" />
+                <input type="button" class="use_it submit" value="Usar" /><input type="button" class="use_and_save_it submit" value="Salvar como modelo" />
             </p>
         </div>		<!-- .sidebar_content ends -->
 
@@ -142,7 +142,7 @@
                 <small>No backup full é feita uma cópia completa de todos os arquivos "marcados" para backup. No incremental é feita uma cópia apenas das modificações. É importamente sempre manter uma política mista de backups.</small>
             </p>
             <p>
-                <input type="button" class="submit" value="Criar" />
+                <input type="button" class="use_it submit" value="Usar" /><input type="button" class="use_and_save_it submit" value="Salvar como modelo" />
             </p>
         </div>		<!-- .sidebar_content ends -->
 
@@ -162,7 +162,7 @@
                 <small>No backup full é feita uma cópia completa de todos os arquivos "marcados" para backup. No incremental é feita uma cópia apenas das modificações. É importamente sempre manter uma política mista de backups.</small>
             </p>
             <p>
-                <input type="button" class="use_it" value="Usar" /><input type="button" class="use_and_save_it" value="Salvar como modelo" />
+                <input type="button" class="use_it submit" value="Usar" /><input type="button" class="use_and_save_it submit" value="Salvar como modelo" />
             </p>
         </div>
         </form>
