--- a/nimbus/filesets/templates/add.html
+++ b/nimbus/filesets/templates/add.html
@@ -6,14 +6,14 @@
 <script type="text/javascript">
 GLOBAL_COUNTER = 0;
 $(document).ready(function(){
-    $(".submit").click(function(){
+    function commit_fileset(is_model){
         //alert("submit");
         // submit forms using ajax
-        var dataString = "computer_id={{ computer_id }}&";
+        var dataString = "computer_id={{ computer_id }}&fileset-is_model="+is_model;
         $.each($('#fileset_new').serializeArray(), function(i, field) {
             dataString += "&"+field.name+"="+field.value;
         });
-        // alert (dataString);
+		console.log(dataString);
         $.ajax({
             type: "POST",
             url: "/filesets/add/",
@@ -25,9 +25,17 @@ $(document).ready(function(){
                 $("#colorbox").hide();
             }
         });
-    });
+    };
     $("#header").hide();
     $("#footer").hide();
+	$(".save_it").click(function(){
+		console.log("Save it")
+		commit_fileset(1);
+	});
+	$(".use_it").click(function(){
+		console.log("Just use it")
+		commit_fileset(0);
+	});
 });
 </script>
 
@@ -49,18 +57,18 @@ $(document).ready(function(){
                 <li>{{ errors.fileset_name }}</li>
             </ul>
             {% endif %}
+            <p>
+                <div id="mensagem_erro_fileset"></div>
+
+                <ul class="tree"><li class="directory first"><span><a href="#" path="/">Arquivos</a></span></li></ul>
+            </p>
             {% for form in forms %}
             <p>
                 <label>{{ form.name.label }}:</label>{{ form.name }}
             </p>
             {% endfor %}
             <p>
-                <div id="mensagem_erro_fileset"></div>
-
-                <ul class="tree"><li class="directory first"><span><a href="#" path="/">Arquivos</a></span></li></ul>
-            </p>
-            <p>
-                <input type="button" class="submit mid" value="Salvar" />
+                <input type="button" class="submit mid use_it" value="Usar" /><input type="button" class="submit mid save_it" value="Salvar como modelo" />
             </p>
             <input type="hidden" name="filepath_set-TOTAL_FORMS" value="" id="id_filepath_set-TOTAL_FORMS" />
             <input type="hidden" name="filepath_set-INITIAL_FORMS" value="" id="id_filepath_set-INITIAL_FORMS" />
