Correção na listagem de filesets e schedules no formulario de backup

--- a/nimbus/procedures/templates/procedures_list.html
+++ b/nimbus/procedures/templates/procedures_list.html
@@ -57,8 +57,9 @@
                     <div class="procedure-config">
                         <p>
                             Offsite ativado: <strong>{{procedure.offsite_on|yesno:"Sim,Não"}}</strong><br/>
-                            Perfil de configuração: <strong>{{procedure.profile.name}}</strong><br/>
-                            Tempo de retenção dos arquivos: <strong>{{procedure.pool.retention_time}}</strong><br/>
+                            Conjunto de arquivos: <strong>{{procedure.fileset.name}}</strong><br/>
+                            Agendamento: <strong>{{procedure.schedule.name}}</strong><br/>
+                            Tempo de retenção dos arquivos: <strong>{{procedure.pool_retention_time}}</strong>
                         </p>
                     </div>
                 </div>
