--- a/nimbus/schedules/templates/add_schedule.html
+++ b/nimbus/schedules/templates/add_schedule.html
@@ -2,9 +2,12 @@
 {% block headtags %}
     
 <link rel="stylesheet" type="text/css" href="/media/css/schedules.css" />
-<link rel="stylesheet" type="text/css" href="/media/lib/css/style.css" />
+
 <script type="text/javascript" src="/media/js/backup.js"></script>
 <script type="text/javascript" src="/media/js/schedules.js"></script>
+<style type="text/css">
+td{padding: 50px;}
+</style>
 {% endblock %}
 
 {% block page %}
@@ -58,7 +61,7 @@
         </div>		<!-- .sidebar ends -->
         <div class="sidebar_content" id="mensal">
             <p>
-                <input type="checkbox" name="schedule.monthly.active" class="schedule_activate" id="monthly" value="1" {% if schedule_monthly_active %}checked="checked"{% endif %} /> <label for="monthly">Ativar</label>
+                <input type="checkbox" name="schedule.monthly.active" class="schedule_activate no-style" id="monthly" value="1" {% if schedule_monthly_active %}checked="checked"{% endif %} /> <label for="monthly">Ativar</label>
             </p>
             <div class="personal_message"><p>Executa o backup em determinados dias do mês, sempre no horário especificado.</p></div>
             <p>
@@ -67,8 +70,8 @@
                     <tr><th colspan="5">Dias do Mês</th></tr><tr>
                 {% for day in days %}
 
-                <td><label for="day_{{day}}">
-                <input type="checkbox" id="day_{{day}}" name="schedule.monthly.day" value="{{day}}" {% if day in schedule_monthly_day %}checked="checked"{% endif %} />
+                <td style="padding: 8px;"><label for="day_{{day}}">
+                <input type="checkbox" id="day_{{day}}" class="schedule" name="schedule.monthly.day" value="{{day}}" {% if day in schedule_monthly_day %}checked="checked"{% endif %} />
                 {{day}}º</label></td>
                     {% if day in end_days %}</tr><tr>{% endif %}
                 {% endfor %}
@@ -93,7 +96,7 @@
 
         <div class="sidebar_content" id="semanal">
             <p>
-                <input type="checkbox" name="week.active" class="schedule_activate" id="weekly" value="1" {% if schedule_weekly_active %}checked="checked"{% endif %} /> <label for="weekly">Ativar</label>
+                <input type="checkbox" name="week.active" class="schedule_activate no-style" id="weekly" value="1" {% if schedule_weekly_active %}checked="checked"{% endif %} /> <label for="weekly">Ativar</label>
             </p>
             <div class="personal_message"><p>Executa o backup em determinados dias da semana, sempre no horário especificado.</p></div>
             <p>
@@ -102,8 +105,8 @@
                     <tr><th colspan="5">Dias da Semana</th></tr><tr>
                 {% for key,vlw in weekdays.items %}
 
-                <td><label for="day_{{day}}">
-                <input type="checkbox" id="day_{{key}}" name="schedule.weekly.day" value="{{key}}" {% if key in schedule_weekly_day %}checked="checked"{% endif %} />
+                <td style="padding: 8px;"><label for="day_{{day}}">
+                <input type="checkbox" id="day_{{key}}" name="schedule.weekly.day" value="{{key}}" class="no-style" {% if key in schedule_weekly_day %}checked="checked"{% endif %} />
                 {{vlw}}</label></td>
                     </tr><tr>
                 {% endfor %}
@@ -128,7 +131,7 @@
 
         <div class="sidebar_content" id="diario">
             <p>
-                <input type="checkbox" name="schedule.dayly.active" class="schedule_activate" id="dayly" value="1" {% if schedule_dayly_active %}checked="checked"{% endif %} /> <label for="dayly">Ativar</label>
+                <input type="checkbox" name="schedule.dayly.active" class="schedule_activate no-style" id="dayly" value="1" {% if schedule_dayly_active %}checked="checked"{% endif %} /> <label for="dayly">Ativar</label>
             </p>
             <div class="personal_message"><p>Executa o backup todos os dias, sempre no horário especificado.</p></div>
             <p>
@@ -148,7 +151,7 @@
 
         <div class="sidebar_content" id="minuto">
             <p>
-                <input type="checkbox" name="schedule.hourly.active" class="schedule_activate" id="hourly" value="1" {% if schedule_hourly_active %}checked="checked"{% endif %} /> <label for="hourly">Ativar</label>
+                <input type="checkbox" name="schedule.hourly.active" class="schedule_activate no-style" id="hourly" value="1" {% if schedule_hourly_active %}checked="checked"{% endif %} /> <label for="hourly">Ativar</label>
             </p>
             <div class="personal_message"><p>Executa o backup todas as horas do dia, sempre no minuto especificado.</p></div>
             <p>
