Removido lixo do POST ao submit

--- a/nimbus/filesets/templates/add.html
+++ b/nimbus/filesets/templates/add.html
@@ -70,9 +70,9 @@ $(document).ready(function(){
             <p>
                 <input type="button" class="submit mid use_it" value="Usar" /><input type="button" class="submit mid save_it" value="Salvar como modelo" />
             </p>
-            <input type="hidden" name="filepath_set-TOTAL_FORMS" value="" id="id_filepath_set-TOTAL_FORMS" />
+            <!-- <input type="hidden" name="filepath_set-TOTAL_FORMS" value="" id="id_filepath_set-TOTAL_FORMS" />
             <input type="hidden" name="filepath_set-INITIAL_FORMS" value="" id="id_filepath_set-INITIAL_FORMS" />
-            <input type="hidden" name="filepath_set-MAX_NUM_FORMS" value="" id="id_filepath_set-MAX_NUM_FORMS" />
+            <input type="hidden" name="filepath_set-MAX_NUM_FORMS" value="" id="id_filepath_set-MAX_NUM_FORMS" /> -->
         </form>
 
 	</div>		<!-- .block_content ends -->
