--- a/nimbus/media/lib/css/style.css
+++ b/nimbus/media/lib/css/style.css
@@ -1337,10 +1337,10 @@ a.submit:hover {
 
 .errorlist {
     -moz-border-radius: 5px;
-    background: none repeat scroll 0 0 red;
-    color: #FFFFFF;
+    background: none repeat scroll 0 0 #FBE3E4;
+    color: #8a1f11;
     font-weight: bold;
-    padding: 7px 5px 2px !important;
+    padding: 7px 5px 1px 0 !important;
     margin-bottom: 10px;
 }
 
