Inicio do refactory nos schedules

--- a/nimbus/procedures/templates/add_procedure.html
+++ b/nimbus/procedures/templates/add_procedure.html
@@ -31,7 +31,7 @@
                 {% endif %}
                 <p><label>{{ field.label }}:</label><br />
                     {% if field.label == 'Schedule' %}
-                        <a href="/schedules/add" class="schedules">Criar um agendamento</a> ou escolher um modelo:
+                        <a href="/schedules/add">Criar um agendamento</a> ou escolher um modelo:
                     {% endif %}
                     {% if field.label == 'Fileset' %}
                         <a href="/filesets/add" class="filesets">Criar um conjunto de arquivos</a> ou escolher um modelo:
