--- a/nimbus/schedules/templates/add_schedule.html
+++ b/nimbus/schedules/templates/add_schedule.html
@@ -32,22 +32,12 @@ td{padding: 50px;}
     <div class="block_content">
         <form name="schedule_new" action="/schedules/add/" method="post" id="schedule_new">
         <div id="error-box">
-            {% if errors.schedule_name %}
-            <ul class="errorlist">
-                <li>{{ errors.schedule_name }}</li>
-            </ul>
-            {% endif %}
-            {% if errors.schedule_day %}
-            <ul class="errorlist">
-                <li>{{ errors.schedule_day }}</li>
-            </ul>
-            {% endif %}
-            {% if errors.schedule_hour %}
-            <ul class="errorlist">
-                <li>{{ errors.schedule_hour }}</li>
-            </ul>
-            {% endif %}
             {{ schedule_form.non_field_errors }}
+            {{ month_form.non_field_errors }}
+            {{ week_form.non_field_errors }}
+            {{ day_form.non_field_errors }}
+            {{ hour_form.non_field_errors }}
+            {{ schedule_form.name.errors }}
             <label>{{ schedule_form.name.label }}:</label> {{ schedule_form.name }}<br/>
             <label>Salvar como modelo</label> {{ schedule_form.is_model }}
         </div>
@@ -69,6 +59,7 @@ td{padding: 50px;}
             <p>
                 <table border="0" cellpadding="0" cellspacing="0">
                 <tbody>
+					{{ month_form.days.errors }}
                     <tr><th colspan="5">Dias do Mês</th></tr><tr>
                 {% for day in days %}
 
