--- a/nimbus/schedules/templates/add_schedule.html
+++ b/nimbus/schedules/templates/add_schedule.html
@@ -16,17 +16,9 @@ td{padding: 50px;}
 {% block page %}
 <!-- TODO: Prever um agendamento já definido. -->
 <div class="block withsidebar" id="schedule" style="margin: 0;">
-    {% if messages %}
-        {% for msg in messages %}
-        <div class="message info">
-            <p>{{ msg }}</p>
-        </div>
-        {% endfor %}
-    {% endif %}
     <div class="block_head">
         <div class="bheadl"></div>
         <div class="bheadr"></div>
-
         <h2>{{ title }}</h2>
     </div>		<!-- .block_head ends -->
     <div class="block_content">
@@ -44,10 +36,10 @@ td{padding: 50px;}
 
         <div class="sidebar">
             <ul class="sidemenu">
-                <li><a href="#mensal" class="monthly">Mensal</a>{{ month_form.active }}</li>
-                <li><a href="#semanal" class="weekly">Semanal</a>{{ week_form.active }}</li>
-                <li><a href="#diario" class="daily">Diário</a>{{ day_form.active }}</li>
-                <li><a href="#minuto" class="hourly">Hora em hora</a>{{ hour_form.active }}</li>
+                <li><a href="#mensal" class="month">Mensal</a>{{ month_form.active }}</li>
+                <li><a href="#semanal" class="week">Semanal</a>{{ week_form.active }}</li>
+                <li><a href="#diario" class="day">Diário</a>{{ day_form.active }}</li>
+                <li><a href="#minuto" class="hour">Hora em hora</a>{{ hour_form.active }}</li>
             </ul>
             <p>Agende a execução deste backup, é possível ativar mais de um agendamento.</p>
         </div>		<!-- .sidebar ends -->
@@ -59,7 +51,7 @@ td{padding: 50px;}
             <p>
                 <table border="0" cellpadding="0" cellspacing="0">
                 <tbody>
-					{{ month_form.days.errors }}
+					<div class="month_error">{{ month_form.days.errors }}</div>
                     <tr><th colspan="5">Dias do Mês</th></tr><tr>
                 {% for day in days %}
 
@@ -71,14 +63,16 @@ td{padding: 50px;}
                     <td colspan="5">&nbsp;</td></tr>
                 </tbody>
                 </table>
-            </p>
                 {{ month_form.days }}
+			</p>
             <p>
+				<div class="month_error">{{ month_form.hour.errors }}</div>
                 <label>{{ month_form.hour.label }}</label>
                 {{ month_form.hour }}<br/>
                 <small>Exemplo: 10:20, 21:35 ou 07:08.</small>
             </p>
             <p>
+				<div class="month_error">{{ month_form.level.errors }}</div>
                 <label>{{ month_form.level.label }}:</label>
                 {{ month_form.level }}<br />
                 <small>No backup full é feita uma cópia completa de todos os arquivos "marcados" para backup. No incremental é feita uma cópia apenas das modificações. É importamente sempre manter uma política mista de backups.</small>
@@ -99,6 +93,7 @@ td{padding: 50px;}
             <p>
                 <table border="0" cellpadding="0" cellspacing="0">
                 <tbody>
+					<div class="week_error">{{ week_form.days.errors }}</div>
                     <tr><th colspan="5">Dias da Semana</th></tr><tr>
                 {% for key,vlw in weekdays.items %}
 
@@ -113,11 +108,13 @@ td{padding: 50px;}
             </p>
                 {{ week_form.days }}<br/>
             <p>
+				<div class="week_error">{{ week_form.hour.errors }}</div>
                 <label>{{ week_form.hour.label }}:</label>
                 {{ week_form.hour }}<br />
                 <small>Exemplo: 10:20, 21:35 ou 07:08.</small>
             </p>
             <p>
+				<div class="week_error">{{ week_form.level.errors }}</div>
                 <label>{{ week_form.level.label }}:</label>
                 {{ week_form.level }}<br />
                 <small>No backup full é feita uma cópia completa de todos os arquivos "marcados" para backup. No incremental é feita uma cópia apenas das modificações. É importamente sempre manter uma política mista de backups.</small>
@@ -136,11 +133,13 @@ td{padding: 50px;}
             <!-- </p> -->
             <div class="personal_message"><p>Executa o backup todos os dias, sempre no horário especificado.</p></div>
             <p>
+				<div class="day_error">{{ day_form.hour.errors }}</div>
                 <label>{{ day_form.hour.label }}:</label>
                 {{ day_form.hour }}<br />
                 <small>Exemplo: 10:20, 21:35 ou 07:08.</small>
             </p>
             <p>
+				<div class="day_error">{{ day_form.level.errors }}</div>
                 <label>{{ day_form.level.label }}:</label>
                 {{ day_form.level }}<br />
                 <small>No backup full é feita uma cópia completa de todos os arquivos "marcados" para backup. No incremental é feita uma cópia apenas das modificações. É importamente sempre manter uma política mista de backups.</small>
@@ -159,11 +158,13 @@ td{padding: 50px;}
             <!-- </p> -->
             <div class="personal_message"><p>Executa o backup todas as horas do dia, sempre no minuto especificado.</p></div>
             <p>
+				<div class="hour_error">{{ hour_form.minute.errors }}</div>
                 <label>{{ hour_form.minute.label }}:</label>
                 {{ hour_form.minute }}<br />
                 <small>Exemplo: 20, 35 ou 08.</small>
             </p>
             <p>
+				<div class="hour_error">{{ hour_form.level.errors }}</div>
                 <label>{{ hour_form.level.label }}:</label>
                 {{ hour_form.level }}<br />
                 <small>No backup full é feita uma cópia completa de todos os arquivos "marcados" para backup. No incremental é feita uma cópia apenas das modificações. É importamente sempre manter uma política mista de backups.</small>
